--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -19,5 +19,8 @@ jobs:
       - name: Merge changes from master
         run: git merge origin/master
 
+      - name: Pull changes from master-backup
+        run: git pull origin master-backup
+
       - name: Push changes to master-backup branch
         run: git push origin master-backup
