--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create and checkout master-backup branch
-        run: git checkout origin/master-backup
+        run: git checkout -b master-backup
 
       - name: Pull changes from master-backup
         run: git pull origin master-backup
