--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -17,7 +17,7 @@ jobs:
         run: git checkout -b master-backup
 
       - name: Pull changes from master-backup
-        run: git pull origin master-backup
+        run: git pull --rebase origin master-backup
         
       - name: Merge changes from master
         run: git merge origin/master
