--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -15,12 +15,9 @@ jobs:
 
       - name: Create and checkout master-backup branch
         run: git checkout -b master-backup
-
-      - name: Pull changes from master-backup
-        run: git pull --rebase origin master-backup
         
       - name: Merge changes from master
-        run: git merge origin/master
+        run: git merge --ff-only origin/master
 
       - name: Push changes to master-backup branch
         run: git push origin master-backup
