--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -15,6 +15,9 @@ jobs:
 
       - name: Create and checkout master-backup branch
         run: git checkout -b master-backup
+
+      - name: Pull changes from master backup branch
+        run: git pull origin master-backup
         
       - name: Merge changes from master
         run: git merge --ff-only origin/master
