--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -23,4 +23,4 @@ jobs:
         run: git checkout --theirs .
 
       - name: Push changes to master-backup branch
-        run: git push origin master-backup
+        run: git push --set-upstream origin master-backup
