--- a/.github/workflows/copy-master-to-backup.yml
+++ b/.github/workflows/copy-master-to-backup.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v2
   
       - name: Checkout the branch you want to rebase
-        run: git checkout master-backup
+        run: git checkout origin/master-backup
 
       - name: Initiate the rebase
-        run: git rebase master
+        run: git rebase origin/master
 
       - name: Continue the rebase
         run: git rebase --continue
