Cogwheel and functionality to enable/disable character portrait select added

--- a/DrDDiary/DrDDiary.csproj
+++ b/DrDDiary/DrDDiary.csproj
@@ -13,6 +13,8 @@
     <AvaloniaResource Remove="Assets\Images\Buttons\dragon_generic_button_clicked.png" />
     <AvaloniaResource Remove="Assets\Images\Buttons\dragon_generic_button_not_clicked.png" />
     <AvaloniaResource Remove="Assets\Images\CharacterScreen\button_selection_character_screen.png" />
+    <AvaloniaResource Remove="Assets\Images\CharacterScreen\Cogwheel_normal_clicked.png" />
+    <AvaloniaResource Remove="Assets\Images\CharacterScreen\Cogwheel_normal_unclicked.png" />
     <AvaloniaResource Remove="Assets\Languages\languageEN.resx" />
     <AvaloniaResource Remove="Assets\Languages\languageSK.resx" />
     <AvaloniaResource Remove="Assets\Sounds\button_click.wav" />
@@ -27,6 +29,8 @@
     <None Remove="Assets\Images\Buttons\dragon_generic_button_clicked.png" />
     <None Remove="Assets\Images\Buttons\dragon_generic_button_not_clicked.png" />
     <None Remove="Assets\Images\CharacterScreen\button_selection_character_screen.png" />
+    <None Remove="Assets\Images\CharacterScreen\Cogwheel_normal_clicked.png" />
+    <None Remove="Assets\Images\CharacterScreen\Cogwheel_normal_unclicked.png" />
     <None Remove="Assets\Images\CharacterScreen\frame_background_character_screen.png" />
     <None Remove="Assets\Images\CharacterScreen\Medieval Knight.jpg" />
     <None Remove="Assets\Sounds\button_click.wav" />
@@ -51,6 +55,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Assets\Images\CharacterScreen\button_selection_character_screen.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Images\CharacterScreen\Cogwheel_normal_clicked.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Images\CharacterScreen\Cogwheel_normal_unclicked.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
