--- a/DrDDiary.Desktop/DrDDiary.Desktop.csproj
+++ b/DrDDiary.Desktop/DrDDiary.Desktop.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
+    <PackageReference Include="protobuf-net" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
